--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <title>Hotel Website</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+
   <link rel="stylesheet" href="css/style.css">
 
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
@@ -111,14 +112,16 @@ document.getElementById("light-theme-btn").addEventListener("click", function ()
   <section class="home" id="home">
     <div class="head_container">
       <div class="box">
-        <div class="text">
-          <h1>Run in Venice!</h1>
-          <p>Join the tour to explore Venice's main attractions and promenades. During your run with us, you'll have the opportunity to savor the tranquil morning views of the city, immerse yourself in its vibrant rhythm, and even feel like a Venetian on a morning jog. We'll also capture numerous photos to help you cherish the beauty of Venice!</p>
-          <a href="booking.html"><button class="btn2">GO!</button></a>
-        </div>
-      </div>
+        <div class="box">
+          <div class="text">
+            <h1 class="entrance">Run in Venice!</h1>
+            <p class="entrance">Join the tour to explore Venice's main attractions and promenades. During your run with us, you'll have the opportunity to savor the tranquil morning views of the city, immerse yourself in its vibrant rhythm, and even feel like a Venetian on a morning jog. We'll also capture numerous photos to help you cherish the beauty of Venice!</p>
+            <a href="booking.html" class="entrance"><button class="btn2">GO!</button></a>
+          </div>
+        </div>        
+         
       <div class="image">
-        <img src="image/home1.jpg" class="slide" id="mainImage">
+        <img src="image/home2.jpg" class="slide blur-entrance" id="mainImage">
       </div>
       <div class="image_item" id="thumbnailContainer">
         <img src="image/home1.jpg" alt="" class="slide active" data-src="image/home1.jpg">
