--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ thumbnails.forEach((thumbnail) => {
     <div class="container flex">
       <div class="left">
         <div class="img">
-          <img src="image/aboutme.gif" alt="" class="image1">
+          <img src="image/a1.mov" alt="" class="image1">
         </div>
       </div>
       <div class="right">
