--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ thumbnails.forEach((thumbnail) => {
           <div class="button-container">
             <button class="btn1" id="feedbacks-button">FEEDBACKS</button>
             <a href="https://youtube.com/shorts/bceRTZ_x8hI?si=rAdlRcawxpTc-7ST">
-              <button class="btn1" id="feedbacks-button">GUARDA IL VIDEO</button>
+              <button class="btn1" id="feedbacks-button">WATCH NOW</button>
             </a>
           </div>
         </div>
@@ -318,7 +318,7 @@ thumbnails.forEach((thumbnail) => {
       <div class="heading_top flex1">
         <div class="heading">
           <h5>WELCOME TO OUR PHOTO GALLERY</h5>
-          <h2>Photo Gallery of Our Hotel</h2>
+          <h2>Photo Gallery of Our Tour</h2>
         </div>
         <div class="button">
           <a href="https://instagram.com/runinvenice?igshid=OGQ5ZDc2ODk2ZA%3D%3D&utm_source=qr" target="_blank">
