--- a/booking.html
+++ b/booking.html
@@ -76,6 +76,8 @@
     }
   </script>
   <section class="book">
+    <h2>Book Your Tour Now</h2>
+    <p>Fill in the form</p>
     <div class="container flex">
         <div class="input grid">
             <div class="box">
@@ -106,7 +108,7 @@
             </div>
             
             <div class="price">
-              <h5>Price: <span>&euro;35</span></h5>
+              <h5>Price: <span>&euro;35/person</span></h5>
           </div>
           <div class="time">
               <h5>Time: <span>7am-8am</span></h5>
@@ -117,9 +119,6 @@
           <div class="duration">
               <h5>Duration: <span>1hr</span></h5>
           </div>
-          
-
-
 
         </div>
         <div class="search">
@@ -184,6 +183,12 @@
 </body>
 
 </html>
+
+
+
+
+
+
 
 
 
