--- a/booking.html
+++ b/booking.html
@@ -60,7 +60,7 @@
 <!---->
   <section class="home" id="home">
       <div class="image">
-        <img src="image/home1.jpg" class="slide">
+        <img src="image/home1.jpg" alt="View of Giudecca" class="slide">
       </div>
      
     </div>
@@ -135,14 +135,11 @@
 <footer>
   <div class="container grid top">
     <div class="box">
-     <!-- <img src="https://img.icons8.com/external-flatart-icons-flat-flatarticons/48/000000/external-hotel-hotel-services-and-city-elements-flatart-icons-flat-flatarticons-1.png" /> 
-     <!-- <p> Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p> -->
-
       <h3>Accepted payment methods</h3>
       <div class="payment grid">
         <img width="48" height="48" src="https://img.icons8.com/color/48/stripe.png" alt="stripe"/>
-        <img src="https://img.icons8.com/color/48/000000/mastercard.png" />
-        <img src="https://img.icons8.com/color-glass/48/000000/paypal.png" />
+        <img src="https://img.icons8.com/color/48/000000/mastercard.png" alt="Mastercard logo" />
+        <img src="https://img.icons8.com/color-glass/48/000000/paypal.png" alt="Paypal logo" />
       </div>
     </div>
 
@@ -164,18 +161,13 @@
         <li>Financial Information</li>
         <li>Terms & Conditions</li>
       </ul>
- 
     </div>
 
     <div class="box">
       <h3>Contact Us</h3>
-
       <ul>
-        <!--<li>3015 Grand Ave, Cocount Grove, Merrick Way FL 123456</li>-->
         <li><i class="far fa-envelope"></i> runninginvenice@gmail.com</li>
         <li><i class="far fa-phone-alt"></i> +39 389 64 64 645 </li>
-        <!-- <li><i class="far fa-phone-alt"></i>123 456 7898 </li>
-        <li><i class="far fa-comments"></i>24/ 7 Customer Services </li> -->
       </ul>
     </div>
   </div>
@@ -183,8 +175,6 @@
 </body>
 
 </html>
-
-
 
 
 
