--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         </div>        
          
       <div class="image">
-        <img src="image/home2.jpg" class="slide blur-entrance" id="mainImage">
+        <img src="image/home2.jpg" alt="Background image" class="slide blur-entrance" id="mainImage">
       </div>
       <div class="image_item" id="thumbnailContainer">
         <img src="image/home1.jpg" alt="" class="slide active" data-src="image/home1.jpg">
@@ -134,11 +134,6 @@ thumbnails.forEach((thumbnail) => {
           line.style.background = change;
         }
       </script>
-      
-
-       <!--<section class="book">
-  </section> --> 
-
 
   <section class="about top" id="about">
     <div class="container flex">
@@ -190,13 +185,6 @@ thumbnails.forEach((thumbnail) => {
         <div class="heading">
           <h5>OUR RUNNING ROUTES</h5>
         </div>
-       <!-- <div class="button1">
-          <a href="booking.html">
-            <button class="btn1">BOOK NOW</button>
-          </a>
-        </div>
-      </div>
-      -->
 
       <div class="content grid">
         <div class="box">
@@ -284,7 +272,7 @@ thumbnails.forEach((thumbnail) => {
           <h2>Photo Gallery of Our Tour</h2>
         </div>
         <div class="button">
-          <a href="https://instagram.com/runinvenice?igshid=OGQ5ZDc2ODk2ZA%3D%3D&utm_source=qr" target="_blank">
+          <a href="https://instagram.com/runinvenice?igshid=OGQ5ZDc2ODk2ZA%3D%3D&utm_source=qr" target="_blank" rel="noopener">
             <button class="btn1">INSTA GALLERY</button>
           </a>
         </div>
@@ -343,7 +331,8 @@ thumbnails.forEach((thumbnail) => {
     <h2>Rialto Bridge</h2>
   </div>
   <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d11153.381967019436!2d12.3332673!3d45.4383683!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1en!2it!4v1637763215366&q=Rialto%20Bridge&output=embed&ll=45.4383683,12.3332673&z=17&markers=45.4383683,12.3332673&hl=en"
-    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+  width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" title="Meeting Point - Rialto Bridge"></iframe>
+
 </section>
 
 
@@ -353,14 +342,11 @@ thumbnails.forEach((thumbnail) => {
   <footer>
     <div class="container grid top">
       <div class="box">
-       <!-- <img src="https://img.icons8.com/external-flatart-icons-flat-flatarticons/48/000000/external-hotel-hotel-services-and-city-elements-flatart-icons-flat-flatarticons-1.png" /> 
-       <p> Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p> -->
-
         <h3>Accepted payment methods</h3>
         <div class="payment grid">
           <img width="48" height="48" src="https://img.icons8.com/color/48/stripe.png" alt="stripe"/>
-          <img src="https://img.icons8.com/color/48/000000/mastercard.png" />
-          <img src="https://img.icons8.com/color-glass/48/000000/paypal.png" />
+          <img src="https://img.icons8.com/color/48/000000/mastercard.png" alt="Mastercard logo" />
+          <img src="https://img.icons8.com/color-glass/48/000000/paypal.png" alt="Paypal logo" />
         </div>
       </div>
 
@@ -389,11 +375,8 @@ thumbnails.forEach((thumbnail) => {
         <h3>Contact Us</h3>
 
         <ul>
-          <!--<li>3015 Grand Ave, Cocount Grove, Merrick Way FL 123456</li>-->
           <li><i class="far fa-envelope"></i> runninginvenice@gmail.com</li>
           <li><i class="far fa-phone-alt"></i> +39 389 64 64 645 </li>
-          <!-- <li><i class="far fa-phone-alt"></i>123 456 7898 </li>
-          <li><i class="far fa-comments"></i>24/ 7 Customer Services </li> -->
         </ul>
       </div>
     </div>
@@ -401,7 +384,5 @@ thumbnails.forEach((thumbnail) => {
 </body>
 
 </html>
-
-
 
 
