--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
         <img src="image/home2.jpg" alt="Background image" class="slide blur-entrance" id="mainImage">
       </div>
       <div class="image_item" id="thumbnailContainer">
-        <img src="image/home1.jpg" alt="" class="slide active" data-src="image/home1.jpg">
-        <img src="image/home2.jpg" alt="" class="slide" data-src="image/home2.jpg">
-        <img src="image/home3.jpg" alt="" class="slide" data-src="image/home3.jpg">
-        <img src="image/home4.jpg" alt="" class="slide" data-src="image/home4.jpg">
+        <img src="image/home1.jpg" alt="" class="slide active" data-src="image/home1.jpg" loading="lazy">
+        <img src="image/home2.jpg" alt="" class="slide" data-src="image/home2.jpg" loading="lazy">
+        <img src="image/home3.jpg" alt="" class="slide" data-src="image/home3.jpg" loading="lazy">
+        <img src="image/home4.jpg" alt="" class="slide" data-src="image/home4.jpg" loading="lazy">
       </div>
       </div>
       </section>
@@ -139,7 +139,7 @@ thumbnails.forEach((thumbnail) => {
     <div class="container flex">
       <div class="left">
         <div class="img">
-          <img src="image/aboutme.gif" alt="" class="image1">
+          <img src="image/aboutme.gif" alt="" class="image1" loading="lazy">
         </div>
       </div>
       <div class="right">
@@ -280,19 +280,19 @@ thumbnails.forEach((thumbnail) => {
 
       <div class="owl-carousel owl-theme">
         <div class="item">
-          <img src="image/photo4.jpg" alt="">
+          <img src="image/photo4.jpg" alt="" loading="lazy">
         </div>
         <div class="item">
-          <img src="image/photogallery2.jpg" alt="">
+          <img src="image/photogallery2.jpg" alt="" loading="lazy">
         </div>
         <div class="item">
-          <img src="image/photogallery3.jpg" alt="">
+          <img src="image/photogallery3.jpg" alt="" loading="lazy">
         </div>
         <div class="item">
-          <img src="image/photo5.jpg" alt="">
+          <img src="image/photo5.jpg" alt="" loading="lazy">
         </div>
         <div class="item">
-          <img src="image/photo9.jpg" alt="">
+          <img src="image/photo9.jpg" alt="" loading="lazy">
         </div>
       </div>
 
